# farhat

./: README.md
Buddy Memory Allocator/: Makefile  buddy.c  buddy.h
CMake/: cmake_basics.md
CMake/learn_cmake_with_examples/: CMakeLists.txt  README.md  main.c
CMake/learn_cmake_with_examples/subdir1/: CMakeLists.txt
CMake/learn_cmake_with_examples/subdir1/include/: test1.h
CMake/learn_cmake_with_examples/subdir1/src/: test1.c
CMake/learn_cmake_with_examples/subdir2/: CMakeLists.txt
CMake/learn_cmake_with_examples/subdir2/include/: test2.h
CMake/learn_cmake_with_examples/subdir2/src/: test2.c
CMake/learn_cmake_with_examples/subdir3/: CMakeLists.txt
CMake/learn_cmake_with_examples/subdir3/include/: test3.h
CMake/learn_cmake_with_examples/subdir3/src/: test3.c
